# ning-os-old

./: Cargo.toml  boot.S  readme.md  x86_64-ning_os.json
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs
